Support self signed certificates. Update README.md

--- a/ClientCertificate/ClientCertificate.csproj
+++ b/ClientCertificate/ClientCertificate.csproj
@@ -16,6 +16,7 @@
       <Content Include="client.pfx">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <None Remove="beheer-databalk.pfx" />
     </ItemGroup>
 
 </Project>
